tests/miniJava/neg/000587_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class java { public static void Main ( String [ ] java ) { { } } } this ; } }
